--- a/location.html
+++ b/location.html
@@ -17,11 +17,11 @@
         <section class="sec">
             <figure>
                
-                <figcaption><a href="pdf_2/"> <img src="image/th (4).jpg" alt="smart world"></a></figcaption><button>power_point</button></figcaption>
+                <figcaption><a href="pdf_2/Chapter  4  RT and Microoperations (5).pdf"> <img src="image/th (4).jpg" alt="smart world"></a></figcaption><button>power_point</button></figcaption>
                </figure>
                <figure>
               
-                <figcaption><a href="pdf/material/">  <img src="image/th (2).jpg" alt="smart pc"></a></figcaption></figcaption><button>material</button></figcaption>
+                <figcaption><a href="pdf/material/Data_and_Computer_Communications_8th_edition_William_Stallings_z (7).pdf">  <img src="image/th (2).jpg" alt="smart pc"></a></figcaption></figcaption><button>material</button></figcaption>
                </figure>
                <figure>
                 <img src="image/pc3.jpg" alt="smart computer">
