--- a/location.html
+++ b/location.html
@@ -17,7 +17,7 @@
         <section class="sec">
             <figure>
                
-                <figcaption><a href="pdf_2/Chapter  4  RT and Microoperations (5).pdf"> <img src="image/th (4).jpg" alt="smart world"></a></figcaption><button>power_point</button></figcaption>
+                <figcaption><a href="pdf_2/"> <img src="image/th (4).jpg" alt="smart world"></a></figcaption><button>power_point</button></figcaption>
                </figure>
                <figure>
               
