--- a/contact.html
+++ b/contact.html
@@ -27,10 +27,10 @@
             
             <video width="320" height="240" autoplay muted controls>
                 
-                <source src="image/Map of Computer Science.mp4" type="video/mp4">
+                <source src="image/image/Map of Computer Science.mp4" type="video/mp4">
                   </video>
                   <video width="320" height="240" autoplay muted controls>
-                    <source src="image/The Power of Computer Science.mp4" type="video/ogg">
+                    <source src="image/image/The Power of Computer Science.mp4" type="video/ogg">
                   </video><figcaption>Map of Computer Science</figcaption>
         </section>
         <footer> Debrebirhan University.Department Of Computer Sience/2013...</footer>
